<resources>
    <string name="app_name">MCWC Lab practicals</string>
    <string name="btnAddItem">ADD ITEM</string>
    <string name="btnUpdateItem">UPDATE ITEM DETAILS</string>
    <string name="btnListItems">LIST ITEMS</string>
    <string name="btnDeleteItem">DELETE ITEM</string>
    <string name="hint_enter_item_name">Enter Item Name</string>
    <string name="hint_enter_item_price">Enter Item Price</string>
    <string name="hint_enter_item_qualtity">Enter Item Quantity</string>
    <string name="btn_label_addToDB">ADD ITEM TO RECORDS</string>
    <string name="btnLabelUpdate">UPDATE ITEM INFO</string>
    <string name="btnLabelRemove">REMOVE ITEM</string>
</resources>
