<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <EditText
        android:id="@+id/edtItemName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/hint_enter_item_name" />

    <EditText
        android:id="@+id/edtItemPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/hint_enter_item_price"
        android:ems="10"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/edtItemQuantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/hint_enter_item_qualtity"
        android:ems="10"
        android:inputType="number" />

    <Button
        android:id="@+id/btnAddItemToDB"
        android:layout_width="@dimen/btnWidth"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/btn_label_addToDB"
        android:layout_gravity="center_horizontal"/>
</LinearLayout>