<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Practical8.Practical8">

    <Button
        android:id="@+id/btnAddItem"
        android:layout_width="@dimen/btnWidth"
        android:layout_height="wrap_content"
        android:text="@string/btnAddItem"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="25dp"
        android:onClick="onClick"/>

    <Button
        android:id="@+id/btnUpdateItem"
        android:layout_width="@dimen/btnWidth"
        android:layout_height="wrap_content"
        android:text="@string/btnUpdateItem"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/btnAddItem"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:onClick="onClick"/>

    <Button
        android:id="@+id/btnListItems"
        android:layout_width="@dimen/btnWidth"
        android:layout_height="wrap_content"
        android:text="@string/btnListItems"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/btnUpdateItem"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:onClick="onClick"/>

    <Button
        android:id="@+id/btnDeleteItem"
        android:layout_width="@dimen/btnWidth"
        android:layout_height="wrap_content"
        android:text="@string/btnDeleteItem"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/btnListItems"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:onClick="onClick"/>


</android.support.constraint.ConstraintLayout>
